# QmlFutures

./: CMakeLists.txt  License.txt  README.md
.github/workflows/: ci.yml
headers/QmlFutures/: Condition.h  FutureInterfaceWrapper.h  FutureWrapper.h  Init.h  Metatypes.h  QF.h  Qml.h  QmlFutureWatcher.h  QmlFutures.h  QmlPromise.h  Tools.h
src/: Condition.cpp  FutureInterfaceWrapper.cpp  FutureWrapper.cpp  Init.cpp  QF.cpp  QmlFutureWatcher.cpp  QmlFutures.cpp  QmlPromise.cpp  Tools.cpp
src/Qml/: Qml.cpp  Qml.qrc
src/Qml/QmlFutures/: qmldir
tests/: CMakeLists-benchmark.txt.in  CMakeLists-gtest.txt.in  CMakeLists.txt
tests/benchmark/: CMakeLists.txt  qml_futures.cpp
tests/test/: CMakeLists.txt  test1_stub.cpp  test_entry_main.cpp
tests/test2_qml_manual/: CMakeLists.txt  main2.cpp  main2.qml  main2.qrc
tests/test3_qml_auto/: CMakeLists.txt  main3.cpp  main3.qrc  tst_0_init.qml  tst_1_condition.qml  tst_2_createFuture.qml  tst_3_qmlFutures.qml  tst_4_qmlPromise.qml  tst_5_complexType.qml  tst_6_combine.qml
